[gd_scene load_steps=9 format=3 uid="uid://cpoxw1t06oygi"]

[ext_resource type="Theme" path="res://Resources/main_menu.tres" id="1_qr86y"]
[ext_resource type="Texture2D" uid="uid://d2ios3c2wcqh3" path="res://Assets/UI/Banners/Carved_9Slides.png" id="1_sndhv"]
[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="2_spw4c"]
[ext_resource type="Material" uid="uid://cbimllpm0m8lc" path="res://Resources/pause_menu.tres" id="3_cthl5"]

[sub_resource type="Animation" id="Animation_p1r4o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yuprt"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.882]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mkxjg"]
resource_name = "options"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vphqj"]
_data = {
"RESET": SubResource("Animation_p1r4o"),
"blur": SubResource("Animation_yuprt"),
"options": SubResource("Animation_mkxjg")
}

[node name="Control" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qr86y")
script = ExtResource("2_spw4c")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("3_cthl5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -135.0
offset_right = 132.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sndhv")
region_rect = Rect2(2, 16, 189, 155)
patch_margin_left = 14
patch_margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -40.0
offset_right = 107.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_top = 22.0
offset_right = 93.0
offset_bottom = 87.0
grow_horizontal = 2
text = "Pause Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vphqj")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vphqj")
}

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 139.0
offset_top = 177.0
offset_right = 382.0
offset_bottom = 544.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -163.0
offset_right = 132.5
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 33
text = "Controls
WASD - Move
LMB - Attack
E - Heal
LShift - Dash
1 - Trisula Skill
2 - Ulos Skill
3 - Siger SKill
Esc - Pause "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="NinePatchRect/VBoxContainer/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/Options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
